--- a/src/app/features/admin/gestion-usuarios/gestion-usuarios.component.html
+++ b/src/app/features/admin/gestion-usuarios/gestion-usuarios.component.html
@@ -68,19 +68,21 @@
           <tr class="bg-white hover:bg-[#fcfdfe] transition-colors duration-200">
             <td class="px-4 py-3 whitespace-nowrap">
               <div class="flex items-center">
-                <div
-                  class="shrink-0 size-10 rounded-full overflow-hidden flex items-center justify-center shadow-2xs">
-                  @if (usuario.perfil) {
-                  <img class="size-full object-cover" [src]="usuario.perfil"
-                    [alt]="usuario.nombre + ' ' + usuario.apellido">
-                  } @else {
-                  <svg class="size-5 text-[#9291aa]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                    stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-                  </svg>
-                  }
-                </div>
+                
+        <div
+          class="shrink-0 size-10 rounded-xl overflow-hidden flex items-center justify-center shadow-2xs">
+          
+          @if (usuario.perfil) {
+            <img class="size-full object-cover"
+              [src]="usuario.perfil"
+              [alt]="usuario.nombre + ' ' + usuario.apellido">
+          } @else {
+            <div
+              class="size-10 rounded-xl flex items-center justify-center text-white font-semibold bg-[#5956e9]">
+              {{ (usuario?.nombre?.[0] ?? '') + (usuario?.apellido?.[0] ?? '') }}
+            </div>
+          }
+        </div>
                 <div class="ms-3">
                   <p class="text-sm font-medium text-[#4e3e76]">{{usuario.nombre}} {{usuario.apellido}}
                     @if(usuario.emailVerified){
