--- a/src/app/features/schools/school-list/school-list.component.html
+++ b/src/app/features/schools/school-list/school-list.component.html
@@ -335,7 +335,7 @@
                     </div>
                     <div class="first:pt-0 last:pb-0">
                       <a class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-[#e77833] hover:bg-[#fef9f9] transition-colors duration-200 cursor-pointer"
-                        (click)="eliminarEscuela(escuela.id!)">
+                        (click)="eliminarEscuela(escuela.id!, escuela.nombreCompleto!)">
                         <svg class="size-[18px]" xmlns="http://www.w3.org/2000/svg" width="128" height="128"
                           viewBox="0 0 48 48">
                           <path fill="currentColor" fill-rule="evenodd"
