--- a/src/app/features/admin/edit-usuario/edit-usuario.component.html
+++ b/src/app/features/admin/edit-usuario/edit-usuario.component.html
@@ -159,10 +159,10 @@
                         </button>
 
                         <!-- Botón Guardar Cambios -->
-                        <button type="submit" [disabled]="isSubmitting || !profileForm.dirty"
+                        <button type="submit" [disabled]="isSubmitting() || !profileForm.dirty"
                             class="py-2 px-5 inline-flex items-center justify-center gap-x-2 text-sm font-semibold rounded-xl bg-[#5956e9] text-white transform hover:scale-[1.02] active:scale-95 transition-all duration-200 font_outfit disabled:opacity-40 disabled:pointer-events-none shadow-2xs hover:shadow-md">
 
-                            @if (isSubmitting) {
+                            @if (isSubmitting()) {
                             <div class="animate-spin inline-block size-4 border-2 border-current border-t-transparent rounded-full"
                                 role="status" aria-label="loading"></div>
                             <span>Actualizando...</span>
